[package]
name = "hypercalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modular-bitfield = "0.11.2"
winapi = {version = "0.3.9", features = ["ioapiset", "fileapi", "errhandlingapi", "winioctl", "memoryapi"]}